@@ -1,3 +1,5 @@
+* Make Array#filter, Enumerable#filter, Hash#filter remove null/undefined values if no callback is provided. [jddalton]
+
 * Rename "context" parameters to "thisArg" and "iterator" parameters to "callback". [FuseJS LH #21, #23] [jddalton, Joe Gornick]
 
 * Ensure all Array, Enumerable, Hash, and ObjectRange methods, that allow a callback, pass the object they are acting on as its third argument. [jddalton]
